--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,11 @@
-train_data_dir: data/Training_Corpora/SemCor
+#train_data_dir: data/Training_Corpora/SemCor
+train_data_dir: data/Evaluation_Datasets/semeval2007
+
 val_data_dir: data/Evaluation_Datasets/semeval2007
 model_name: distilbert-base-uncased
 output_dir: output/semeval2007
 num_sense: 5
-max_seq_len: 20
+max_seq_len: 128
 batch_size: 1
 lr: 0.00001
 weight_decay: 0.01
@@ -15,6 +17,8 @@ grad_clip: 1.0
 pos: ALL
 device: cpu
 seed: 1234
-report_to: wandb
+workers: 1
+report_to: none
+architecture: span_extraction
 
 # run python train.py
