--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,21 @@
 train_data_dir: data/Training_Corpora/SemCor
 val_data_dir: data/Evaluation_Datasets/semeval2007
 model_name: distilbert-base-uncased
-output_dir: output/semeval2007
+output_dir: output
 num_sense: 5
 max_seq_len: 128
-batch_size: 1
+batch_size: 16
 lr: 0.00001
 weight_decay: 0.01
 epochs: 3
-logging_step: 10
+logging_step: 2000
 precision: fp16
 warmup_ratio: 0.1
 grad_clip: 1.0
 pos: ALL
-device: cpu
-seed: none
+device: cuda
+seed: 42
 workers: 1
-report_to: none
+report_to: wandb
 architecture: span
 do_predict: true
